--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,36 @@
 
+@Article{	  gilbert2024testing,
+  author	= {Gilbert, Madeline},
+  journal	= {Natural Language and Linguistic Theory},
+  number	= {2},
+  pages		= {493--531},
+  title		= {Testing for Underlying Representations: Segments and
+		  Clusters in Sevillian Spanish},
+  volume	= {42},
+  year		= {2024}
+}
+
+@Article{	  privizentseva2024semantic,
+  author	= {Privizentseva, Mariia},
+  journal	= {Natural Language and Linguistic Theory},
+  number	= {2},
+  pages		= {767--814},
+  title		= {Semantic Agreement in Russian: Gender, Declension, and
+		  Morphological Ineffability},
+  volume	= {42},
+  year		= {2024}
+}
+
+@Article{	  kirby2024extending,
+  author	= {Kirby, Ian L.},
+  journal	= {Natural Language and Linguistic Theory},
+  number	= {2},
+  pages		= {557--608},
+  title		= {Extending the Typology of Quantifier Particles},
+  volume	= {42},
+  year		= {2024}
+}
+
 @Article{	  vangelderen2015copula,
   author	= {Van Gelderen, Elly},
   journal	= {Lingue e Linguaggio},
