--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,28 @@
 
+@InProceedings{	  alers-valentin2024biologicallyplausible,
+  address	= {Rome, Italy},
+  author	= {Alers-Valent{\'i}n, Hilton and Fong, Sandiway},
+  booktitle	= {Proceedings of the 16th International Conference on Agents
+		  and Artificial Intelligence},
+  pages		= {1108-1118},
+  publisher	= {SCITEPRESS - Science and Technology Publications},
+  title		= {Towards a Biologically-Plausible Computational Model of
+		  Human Language Cognition},
+  year		= {2024}
+}
+
+@Article{	  alers-valentin2023modeling,
+  author	= {Alers-Valent{\'i}n, Hilton and Fong, Sandiway and
+		  Vega-Riveros, J. Fernando},
+  journal	= {International Conference on Agents and Artificial
+		  Intelligence},
+  pages		= {608--616},
+  title		= {Modeling Syntactic Knowledge With Neuro-Symbolic
+		  Computation},
+  volume	= {3},
+  year		= {2023}
+}
+
 @Article{	  gilbert2024testing,
   author	= {Gilbert, Madeline},
   journal	= {Natural Language and Linguistic Theory},
