--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,58 @@
 
+@Article{	  fedzechkina2012language,
+  author	= {Fedzechkina, Maryia and Jaeger, T. Florian and Newport,
+		  Elissa L.},
+  journal	= {Proceedings of the National Academy of Sciences},
+  number	= {44},
+  pages		= {17897--17902},
+  title		= {Language Learners Restructure Their Input to Facilitate
+		  Efficient Communication},
+  volume	= {109},
+  year		= {2012}
+}
+
+@Article{	  piantadosi2011word,
+  author	= {Piantadosi, Steven T. and Tily, Harry and Gibson, Edward},
+  journal	= {Proceedings of the National Academy of Sciences},
+  number	= {9},
+  pages		= {3526--3529},
+  title		= {Word Lengths Are Optimized for Efficient Communication},
+  volume	= {108},
+  year		= {2011}
+}
+
+@Article{	  frank2008speaking,
+  author	= {Frank, A. and Jaeger, T. Florian},
+  journal	= {Proceedings of the 30th Annual Meeting of the Cognitive
+		  Science Society},
+  pages		= {939--944},
+  title		= {Speaking Rationally: Uniform Information Density as an
+		  Optimal Strategy for Language Production},
+  year		= {2008}
+}
+
+@Article{	  gibson2013need,
+  author	= {Gibson, Edward and Fedorenko, Evelina},
+  journal	= {Language and Cognitive Processes},
+  number	= {1-2},
+  pages		= {88--124},
+  title		= {The Need for Quantitative Methods in Syntax and Semantics
+		  Research},
+  volume	= {28},
+  year		= {2013}
+}
+
+@Article{	  sprouse2013empirical,
+  author	= {Sprouse, Jon and Almeida, Diogo},
+  journal	= {Language and Cognitive Processes},
+  number	= {3},
+  pages		= {222--228},
+  title		= {The Empirical Status of Data in Syntax: A Reply to Gibson
+		  and Fedorenko},
+  volume	= {28},
+  year		= {2013}
+}
+
 @InProceedings{	  alers-valentin2024biologicallyplausible,
   address	= {Rome, Italy},
   author	= {Alers-Valent{\'i}n, Hilton and Fong, Sandiway},
