--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,21 @@
 
+@PhDThesis{	  dumitrescu1990grammar,
+  address	= {Los Angeles, Cal},
+  author	= {Dumitrescu, Domnita},
+  school	= {University of Southern California},
+  title		= {The grammar of Echo questions in Spanish and Rumanian.
+		  Syntax, Semantics and Pragmatics},
+  year		= {1990}
+}
+
+@Book{		  fabregas2024diccionario,
+  address	= {Abingdon, Oxon London New York, NY},
+  author	= {F{\'a}bregas, Antonio},
+  publisher	= {Routledge},
+  title		= {Diccionario de afijos del espa{\~n}ol contempor{\'a}neo},
+  year		= {2024}
+}
+
 @Article{	  fedzechkina2012language,
   author	= {Fedzechkina, Maryia and Jaeger, T. Florian and Newport,
 		  Elissa L.},
