--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,11 @@
 
+@Article{	  lee2024hyperraising,
+  author	= {Lee, Tommy Tsz-Ming and Yip, Ka-Fai},
+  journal	= {Natural Language \\& Linguistic Theory},
+  title		= {Hyperraising, Evidentiality, and Phase Deactivation},
+  year		= {2024}
+}
+
 @PhDThesis{	  dumitrescu1990grammar,
   address	= {Los Angeles, Cal},
   author	= {Dumitrescu, Domnita},
