--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,49 @@
 
+@Book{		  jonsson2021syntactic,
+  editor	= {J{\'o}nsson, J{\'o}hannes G{\'i}li and Eyth{\'o}rsson,
+		  Th{\'o}rhallur},
+  publisher	= {Oxford University Press},
+  title		= {Syntactic Features and the Limits of Syntactic Change},
+  year		= {2021}
+}
+
+@Book{		  mathieu2017microchange,
+  address	= {Oxford},
+  editor	= {Mathieu, {\"E}ric and Truswell, Robert},
+  publisher	= {Oxford University Press},
+  title		= {Micro-Change and Macro-Change in Diachronic Syntax},
+  volume	= {(23)},
+  year		= {2017}
+}
+
+@Book{		  heine2011oxford,
+  address	= {Oxford},
+  editor	= {Heine, Bernd and Narrog, Heiko},
+  publisher	= {Oxford University Press},
+  title		= {The Oxford Handbook of Grammaticalization},
+  year		= {2011}
+}
+
+@Article{	  schwarzschild2005measure,
+  author	= {Schwarzschild, Roger},
+  journal	= {Recherches linguistiques de Vincennes},
+  number	= {34},
+  pages		= {207--228},
+  title		= {Measure phrases as modifiers of adjectives},
+  year		= {2005}
+}
+
+@Article{	  cariani2023positive,
+  author	= {Cariani, Fabrizio and Santorio, Paolo and Wellwood,
+		  Alexis},
+  journal	= {Proceedings of Sinn und Bedeutung},
+  pages		= {96--113},
+  title		= {Positive Gradable Adjective Ascriptions without Positive
+		  Morphemes},
+  volume	= {27},
+  year		= {2023}
+}
+
 @Article{	  lee2024hyperraising,
   author	= {Lee, Tommy Tsz-Ming and Yip, Ka-Fai},
   journal	= {Natural Language \\& Linguistic Theory},
