--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,112 @@
 
+@Article{	  ormazabal2024beginning,
+  author	= {Ormazabal, Javier and Romero, Juan},
+  journal	= {Linguistic Inquiry},
+  pages		= {1--49},
+  title		= {In the Beginning Was a To-Phrase},
+  year		= {2024}
+}
+
+@Article{	  hu2024anaphora,
+  author	= {Hu, Yehao and Cheng, Gong},
+  journal	= {Linguistic Inquiry},
+  pages		= {1--44},
+  title		= {Anaphora and Depictives Do Not Rule Out Small Clause
+		  Approaches to Argument Structure: A Reply to Bruening
+		  2018},
+  year		= {2024}
+}
+
+@Article{	  katzir2023why,
+  author	= {Katzir, Roni},
+  journal	= {Biolinguistics},
+  pages		= {1--12},
+  title		= {Why Large Language Models Are Poor Theories of Human
+		  Linguistic Cognition: A Reply to Piantadosi},
+  volume	= {17},
+  year		= {2023}
+}
+
+@Book{		  haider2023chatgpt,
+  author	= {Haider, Hubert},
+  publisher	= {LingBuzz},
+  title		= {Is Chat-GPT a Grammatically Competent Informant?},
+  year		= {2023}
+}
+
+@Book{		  marcus2022noam,
+  author	= {Marcus, Gary},
+  title		= {Noam Chomsky and {GPT}-3},
+  year		= {2022}
+}
+
+@Book{		  oliver2018inteligencia,
+  author	= {Oliver, Nuria},
+  title		= {Inteligencia Artificial: Ficci{\'o}n, realidad y...
+		  sue{\~n}os},
+  year		= {2018}
+}
+
+@Article{	  bridgelall2024unraveling,
+  author	= {Bridgelall, Raj},
+  journal	= {Artificial Intelligence Review},
+  number	= {4},
+  pages		= {89},
+  title		= {Unraveling the Mysteries of {AI} Chatbots},
+  volume	= {57},
+  year		= {2024}
+}
+
+@Article{	  hawke2024truth,
+  author	= {Hawke, Peter and Hornischer, Levin and Berto, Francesco},
+  journal	= {Linguistics and Philosophy},
+  title		= {Truth, Topicality, and Transparency: One-Component versus
+		  Two-Component Semantics},
+  year		= {2024}
+}
+
+@Article{	  myers2024foundation,
+  author	= {Myers, Devon and Mohawesh, Rami and Chellaboina, Venkata
+		  Ishwarya and Sathvik, Anantha Lakshmi and Venkatesh,
+		  Praveen and Ho, Yi-Hui and Henshaw, Hanna and Alhawawreh,
+		  Muna and Berdik, David and Jararweh, Yaser},
+  journal	= {Cluster Computing},
+  number	= {1},
+  pages		= {1--26},
+  title		= {Foundation and Large Language Models: Fundamentals,
+		  Challenges, Opportunities, and Social Impacts},
+  volume	= {27},
+  year		= {2024}
+}
+
+@Article{	  hicks2024chatgpt,
+  author	= {Hicks, Michael Townsen and Humphries, James and Slater,
+		  Joe},
+  journal	= {Ethics and Information Technology},
+  number	= {2},
+  pages		= {38},
+  title		= {ChatGPT Is Bullshit},
+  volume	= {26},
+  year		= {2024}
+}
+
+@Book{		  stalmaszczyk2021cambridge,
+  address	= {Cambridge},
+  editor	= {Stalmaszczyk, Piotr},
+  publisher	= {Cambridge University Press},
+  title		= {The Cambridge Handbook of the Philosophy of Language},
+  year		= {2021}
+}
+
+@Book{		  ellis2010essential,
+  address	= {Cambridge ; New York},
+  author	= {Ellis, Paul D.},
+  publisher	= {Cambridge University Press},
+  title		= {The Essential Guide to Effect Sizes: Statistical Power,
+		  Meta-Analysis, and the Interpretation of Research Results},
+  year		= {2010}
+}
+
 @Book{		  jonsson2021syntactic,
   editor	= {J{\'o}nsson, J{\'o}hannes G{\'i}li and Eyth{\'o}rsson,
 		  Th{\'o}rhallur},
