--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,23 @@
 
+@Article{	  mcinnerney2023argument,
+  author	= {McInnerney, Andrew},
+  journal	= {Linguistic Inquiry},
+  pages		= {1--13},
+  title		= {The Argument/Adjunct Distinction Does Not Condition
+		  Islandhood of {PP}s in English},
+  year		= {2023}
+}
+
+@Article{	  takahashi2009wholesalea,
+  author	= {Takahashi, Shoichi and Hulsey, Sarah},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {387--426},
+  title		= {Wholesale Late Merger: Beyond the A/\=A Distinction},
+  volume	= {40},
+  year		= {2009}
+}
+
 @Article{	  ormazabal2024beginning,
   author	= {Ormazabal, Javier and Romero, Juan},
   journal	= {Linguistic Inquiry},
