--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,22 @@
 
+@Article{	  erlewine2020antilocality,
+  author	= {Erlewine, Michael Yoshitaka},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Anti-Locality and Subject Extraction},
+  volume	= {5},
+  year		= {2020}
+}
+
+@PhDThesis{	  brown2017heads,
+  author	= {Brown, Jessica M. M.},
+  school	= {University of Cambridge},
+  title		= {Heads and Adjuncts: An Experimental Study of Subextraction
+		  from Participials and Coordination in English, German and
+		  Norwegian},
+  year		= {2017}
+}
+
 @Article{	  mcinnerney2023argument,
   author	= {McInnerney, Andrew},
   journal	= {Linguistic Inquiry},
