--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,25 @@
 
+@Article{	  mcdaniel2015role,
+  author	= {McDaniel, Dana and McKee, Cecile and Cowart, Wayne and
+		  Garrett, Merrill F.},
+  journal	= {Language},
+  number	= {2},
+  pages		= {415--441},
+  title		= {The Role of the Language Production System in Shaping
+		  Grammars},
+  volume	= {91},
+  year		= {2015}
+}
+
+@Article{	  cowart1989notes,
+  author	= {Cowart, Wayne},
+  journal	= {Journal of Psycholinguistic Research},
+  number	= {1},
+  title		= {Notes on the Biology of Syntactic Processing},
+  volume	= {18},
+  year		= {1989}
+}
+
 @Article{	  erlewine2020antilocality,
   author	= {Erlewine, Michael Yoshitaka},
   journal	= {Glossa: a journal of general linguistics},
