--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,15 @@
 
+@Article{	  burukina2024big,
+  author	= {Burukina, Irina and Borise, Lena and \noopsortdikkenden
+		  Dikken, Marcel},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {A `big {DP}' analysis of Russian copular constructions
+		  with {\`e}to},
+  volume	= {9},
+  year		= {2024}
+}
+
 @Article{	  mcdaniel2015role,
   author	= {McDaniel, Dana and McKee, Cecile and Cowart, Wayne and
 		  Garrett, Merrill F.},
