--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,15 @@
 
+@Article{	  heinz2013what,
+  author	= {Heinz, Jeffrey and Idsardi, William},
+  journal	= {Topics in Cognitive Science},
+  number	= {1},
+  pages		= {111--131},
+  title		= {What Complexity Differences Reveal About Domains in
+		  Language*},
+  volume	= {5},
+  year		= {2013}
+}
+
 @Article{	  burukina2024big,
   author	= {Burukina, Irina and Borise, Lena and \noopsortdikkenden
 		  Dikken, Marcel},
