--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,16 @@
 
+@Article{	  tenenbaum2011howa,
+  author	= {Tenenbaum, Joshua B. and Kemp, Charles and Griffiths,
+		  Thomas L. and Goodman, Noah D.},
+  journal	= {Science},
+  number	= {6022},
+  pages		= {1279--1285},
+  title		= {How to Grow a Mind: Statistics, Structure, and
+		  Abstraction},
+  volume	= {331},
+  year		= {2011}
+}
+
 @Article{	  heinz2013what,
   author	= {Heinz, Jeffrey and Idsardi, William},
   journal	= {Topics in Cognitive Science},
