--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,27 @@
 
+@Article{	  harris1994chomskyan,
+  author	= {Harris, R. Allen},
+  journal	= {Perspectives on Science},
+  number	= {1},
+  pages		= {38--75},
+  title		= {The {{Chomskyan Revolution I}}: {{Syntax}}, {{Semantics}},
+		  and {{Science}}},
+  volume	= {2},
+  year		= {1994},
+  doi		= {10.1162/posc_a_00452}
+}
+
+@Article{	  harris1994chomskyana,
+  author	= {Harris, R. Allen},
+  journal	= {Perspectives on Science},
+  number	= {2},
+  pages		= {176--230},
+  title		= {The {{Chomskyan Revolution II}}: {{Sturm}} Und {{Drang}}},
+  volume	= {2},
+  year		= {1994},
+  doi		= {10.1162/posc_a_00456}
+}
+
 @Article{	  tenenbaum2011howa,
   author	= {Tenenbaum, Joshua B. and Kemp, Charles and Griffiths,
 		  Thomas L. and Goodman, Noah D.},
