--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,5 +1,53 @@
 
-@Article{	  harris1994chomskyan,
+@Article{	  holtz2024examining,
+  author	= {Holtz, Annie and Papineau, Brandon T.},
+  journal	= {Infant and Child Development},
+  number	= {1},
+  pages		= {e2475},
+  title		= {Examining the Female-Talker Default in Experimental
+		  Language Acquisition Research},
+  volume	= {33},
+  year		= {2024}
+}
+
+@Article{	  martin2020experimental,
+  author	= {Martin, Alexander and Holtz, Annie and Abels, Klaus and
+		  Adger, David and Culbertson, Jennifer},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Experimental Evidence for the Influence of Structure and
+		  Meaning on Linear Order in the Noun Phrase},
+  volume	= {5},
+  year		= {2020}
+}
+
+@PhDThesis{	  holtz2024cognitive,
+  address	= {Edinburgh},
+  author	= {Holtz, Annie},
+  school	= {University of Edinburgh},
+  title		= {Cognitive Biases in Competition: Innovation and the
+		  Evolution of Language Structure},
+  year		= {2024}
+}
+
+@Book{		  brezina2018statistics,
+  address	= {Cambridge},
+  author	= {Brezina, Vaclav},
+  publisher	= {Cambridge University Press},
+  title		= {Statistics in Corpus Linguistics: A Practical Guide},
+  year		= {2018}
+}
+
+@Book{		  biber1998corpus,
+  address	= {Cambridge},
+  author	= {Biber, Douglas and Conrad, Susan and Reppen, Randi},
+  publisher	= {Cambridge University Press},
+  title		= {Corpus Linguistics: Investigating Language Structure and
+		  Use},
+  year		= {1998}
+}
+
+@Article{	  harris1994chomskyanb,
   author	= {Harris, R. Allen},
   journal	= {Perspectives on Science},
   number	= {1},
