--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,37 @@
 
+@Article{	  salmon2024singular,
+  author	= {Salm{\'o}n, Nathan},
+  journal	= {Synthese},
+  number	= {1},
+  pages		= {20},
+  title		= {Singular Concepts},
+  volume	= {204},
+  year		= {2024}
+}
+
+@Article{	  unal2024asymmetriesa,
+  author	= {{\"U}nal, Ercenur and Wilson, Frances and Trueswell, John
+		  and Papafragou, Anna},
+  journal	= {Cognition},
+  pages		= {105868},
+  title		= {Asymmetries in Encoding Event Roles: Evidence from
+		  Language and Cognition},
+  volume	= {250},
+  year		= {2024}
+}
+
+@Article{	  abeille2019corpus,
+  author	= {Abeill{\'e}, Anne and Cl{\'e}ment, Lionel and
+		  Li{\'e}geois, Lo\''ic},
+  journal	= {TAL},
+  number	= {2},
+  pages		= {19--43},
+  title		= {Un corpus arbor{\'e} pour le fran{\c c}ais : le French
+		  Treebank},
+  volume	= {60},
+  year		= {2019}
+}
+
 @Article{	  holtz2024examining,
   author	= {Holtz, Annie and Papineau, Brandon T.},
   journal	= {Infant and Child Development},
