--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,121 @@
 
+@InBook{	  adger2018autonomy,
+  address	= {Berlin},
+  author	= {Adger, David},
+  booktitle	= {Syntactic Structures after 60 Years},
+  editor	= {Hornstein, Norbert and Lasnik, Howard and Patel-Grosz,
+		  Pritty and Yang, Charles},
+  publisher	= {Walter de Gruyter},
+  title		= {The autonomy of syntax},
+  year		= {2018}
+}
+
+@Article{	  momma2024speakers,
+  author	= {Momma, Shota and Richards, Norvin and Ferreira, Victor},
+  journal	= {lingbuzz},
+  title		= {Speakers Encode Silent Structures: Evidence from
+		  Complementizer Priming in English},
+  year		= {2024}
+}
+
+@Book{		  lin2024probing,
+  author	= {Lin, Fangru and Altshuler, Daniel and Pierrehumbert, Janet
+		  B.},
+  publisher	= {arXiv},
+  title		= {Probing Large Language Models for Scalar Adjective Lexical
+		  Semantics and Scalar Diversity Pragmatics},
+  volume	= {(arXiv:2404.03301)},
+  year		= {2024}
+}
+
+@Book{		  jumelet2024black,
+  author	= {Jumelet, Jaap and Bylinina, Lisa and Zuidema, Willem and
+		  Szymanik, Jakub},
+  publisher	= {arXiv},
+  title		= {Black Big Boxes: Do Language Models Hide a Theory of
+		  Adjective Order?},
+  volume	= {(arXiv:2407.02136)},
+  year		= {2024}
+}
+
+@InProceedings{	  garisoler2020bert,
+  address	= {Online},
+  author	= {Gar{\'i} Soler, Aina and Apidianaki, Marianna},
+  booktitle	= {Proceedings of the 2020 Conference on Empirical Methods in
+		  Natural Language Processing (EMNLP)},
+  editor	= {Webber, Bonnie and Cohn, Trevor and He, Yulan and Liu,
+		  Yang},
+  pages		= {7371-7385},
+  publisher	= {Association for Computational Linguistics},
+  title		= {{BERT} Knows Punta Cana Is Not Just Beautiful, It's
+		  Gorgeous: Ranking Scalar Adjectives with Contextualised
+		  Representations},
+  year		= {2020}
+}
+
+@Article{	  gotzner2018scalar,
+  author	= {Gotzner, Nicole and Solt, Stephanie and Benz, Anton},
+  journal	= {Frontiers in Psychology},
+  title		= {Scalar Diversity, Negative Strengthening, and Adjectival
+		  Semantics},
+  volume	= {9},
+  year		= {2018}
+}
+
+@InProceedings{	  wilkinson2016gold,
+  address	= {Portoro\v z, Slovenia},
+  author	= {Wilkinson, Bryan and Tim, Oates},
+  booktitle	= {Proceedings of the Tenth International Conference on
+		  Language Resources and Evaluation (LREC'16)},
+  editor	= {Calzolari, Nicoletta and Choukri, Khalid and Declerck,
+		  Thierry and Goggi, Sara and Grobelnik, Marko and Maegaard,
+		  Bente and Mariani, Joseph and Mazo, Helene and Moreno,
+		  Asuncion and Odijk, Jan and Piperidis, Stelios},
+  pages		= {2669-2675},
+  publisher	= {European Language Resources Association (ELRA)},
+  title		= {A Gold Standard for Scalar Adjectives},
+  year		= {2016}
+}
+
+@Article{	  demelo2013good,
+  author	= {De Melo, Gerard and Bansal, Mohit},
+  journal	= {Transactions of the Association for Computational
+		  Linguistics},
+  pages		= {279--290},
+  title		= {Good, Great, Excellent: Global Inference of Semantic
+		  Intensities},
+  volume	= {1},
+  year		= {2013}
+}
+
+@InBook{	  buenafuentesdelamata2021tool,
+  author	= {Buenafuentes de la Mata, Cristina and S{\'a}nchez Lancis,
+		  Carlos},
+  booktitle	= {Syntactic Geolectal Variation: Traditional approaches,
+		  current challenges and new tools},
+  editor	= {Cerrudo, Alba and Gallego, {\'A}ngel J. and Roca Urgell,
+		  Francesc},
+  pages		= {319-346},
+  publisher	= {John Benjamins Publishing Company},
+  title		= {A tool for the study of syntactic variation in Spanish:
+		  The Corpus del espa{\~n}ol del siglo {XXI} (CORPES {XXI})},
+  year		= {2021}
+}
+
+@Book{		  colomina-almiana2020language,
+  editor	= {Colomina-Almiana, Juan J and Sessarego, Sandro},
+  publisher	= {Taylor and Francis},
+  title		= {Language Patterns in Spanish and Beyond},
+  year		= {2020}
+}
+
+@Article{	  newman2024order,
+  author	= {Newman, Elise},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {The Order of Operations and A, A-bar Interactions},
+  year		= {2024}
+}
+
 @Article{	  salmon2024singular,
   author	= {Salm{\'o}n, Nathan},
   journal	= {Synthese},
