--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,41 @@
 
+@Article{	  devos2005coordination,
+  author	= {de Vos, Mark and Vicente, Luis},
+  journal	= {Proceedings of the 24th West Coast Conference on Formal
+		  Linguistics},
+  title		= {Coordination under Right Node Raising},
+  volume	= {24},
+  year		= {2005}
+}
+
+@Article{	  giannakidou1998reverse,
+  author	= {Giannakidou, Anastasia and Merchant, Jason},
+  number	= {2-3},
+  pages		= {233--256},
+  title		= {Reverse Sluicing in English and Greek},
+  volume	= {15},
+  year		= {1998}
+}
+
+@InBook{	  devries2017acrosstheboard,
+  author	= {de Vries, Mark},
+  booktitle	= {The Wiley Blackwell Companion to Syntax, Second Edition},
+  pages		= {1-31},
+  publisher	= {John Wiley and Sons, Ltd},
+  title		= {Across-the-Board Phenomena},
+  year		= {2017}
+}
+
+@Article{	  boskovic2000acrosstheboard,
+  author	= {Bo{\v s}kovi{\'c}, {\v Z}eljko and Franks, Steven},
+  journal	= {Syntax},
+  number	= {2},
+  pages		= {107--128},
+  title		= {Across-the-Board Movement and {LF}},
+  volume	= {3},
+  year		= {2000}
+}
+
 @InBook{	  adger2018autonomy,
   address	= {Berlin},
   author	= {Adger, David},
