--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,77 @@
 
+@Article{	  paparounas2024visibility,
+  author	= {Paparounas, Lefteris},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {537--577},
+  title		= {Visibility and Intervention in Allomorphy: Lessons from
+		  Modern Greek},
+  volume	= {55},
+  year		= {2024}
+}
+
+@Article{	  zeijlstra2024two,
+  author	= {Zeijlstra, Hedde},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {622--641},
+  title		= {Two Varieties of Korean: Rightward Head Movement or
+		  Polarity Sensitivity?},
+  volume	= {55},
+  year		= {2024}
+}
+
+@Article{	  pak2024restrictions,
+  author	= {Pak, Miok and Portner, Paul and Zanuttini, Raffaella},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {643--657},
+  title		= {Restrictions on Indexicals in Directive Clauses},
+  volume	= {55},
+  year		= {2024}
+}
+
+@Article{	  oxford2024probe,
+  author	= {Oxford, Will},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {489--535},
+  title		= {Probe Specification and Agreement Variation: Evidence from
+		  the Algonquian Inverse},
+  volume	= {55},
+  year		= {2024}
+}
+
+@Article{	  srinivas2024does,
+  author	= {Srinivas, Sadhwi and Legendre, G{\'e}raldine},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {595--621},
+  title		= {Does D Select the {CP} in Light Verb Constructions? A
+		  Reply to Hankamer and Mikkelsen 2021},
+  volume	= {55},
+  year		= {2024}
+}
+
+@Article{	  ormazabal2024deconstructing,
+  author	= {Ormazabal, Javier and Romero, Juan},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {445--488},
+  title		= {Deconstructing {SE}-Constructions: Number Agreement and
+		  Postsyntactic Variation},
+  volume	= {55},
+  year		= {2024}
+}
+
+@Article{	  mcinnerney2022position,
+  author	= {McInnerney, Andrew},
+  journal	= {Linguistic Inquiry},
+  pages		= {1--16},
+  title		= {The Position of Wh -Subjects in Labeling Theory},
+  year		= {2022}
+}
+
 @Article{	  devos2005coordination,
   author	= {de Vos, Mark and Vicente, Luis},
   journal	= {Proceedings of the 24th West Coast Conference on Formal
