--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,20 @@
 
+@Article{	  pinzin2024what,
+  author	= {Pinzin, Francesco},
+  journal	= {Linguistics},
+  title		= {What's Hidden below Definiteness and Genitive: On
+		  Indefinite Partitive Articles in Romance},
+  year		= {2024}
+}
+
+@Article{	  bhadra2024verb,
+  author	= {Bhadra, Diti},
+  journal	= {Linguistics and Philosophy},
+  title		= {Verb Roots Encode Outcomes: Argument Structure and Lexical
+		  Semantics of Reversal and Restitution},
+  year		= {2024}
+}
+
 @Article{	  paparounas2024visibility,
   author	= {Paparounas, Lefteris},
   journal	= {Linguistic Inquiry},
