--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,36 @@
 
+@Book{		  gumiel-molina2008estructura,
+  address	= {Alcal\'a de Henares},
+  author	= {Gumiel-Molina, Silvia},
+  publisher	= {Universidad de Alcal\'a de Henares},
+  title		= {Estructura argumental y predicaci{\'o}n secundaria},
+  year		= {2008}
+}
+
+@InBook{	  goodall2017coordination,
+  author	= {Goodall, Grant},
+  booktitle	= {Oxford Research Encyclopedia of Linguistics},
+  title		= {Coordination in Syntax},
+  year		= {2017}
+}
+
+@Article{	  elbourne2024program,
+  author	= {Elbourne, Paul},
+  journal	= {Linguistic Inquiry},
+  pages		= {1--38},
+  title		= {A Program for Eliminating Syntactic Categories},
+  year		= {2024}
+}
+
+@Article{	  martinez2024evaluating,
+  author	= {Martinez, Hector Javier Vazquez and Heuser, Annika and
+		  Yang, Charles and Kodner, Jordan},
+  journal	= {LingBuzz},
+  title		= {Evaluating the Existence Proof: {LLM}s as Cognitive Models
+		  of Language Acquisition},
+  year		= {2024}
+}
+
 @Article{	  pinzin2024what,
   author	= {Pinzin, Francesco},
   journal	= {Linguistics},
