--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,75 @@
 
+@InCollection{	  garcia-fernandez2024auxiliary,
+  author	= {{Garc{\'i}a-Fern{\'a}ndez}, Luis and Krivochen, Diego
+		  Gabriel},
+  booktitle	= {Manual of {{Romance Word Classes}}},
+  editor	= {De Cesare, Anna-Maria and Salvi, Giampaolo},
+  pages		= {325--344},
+  publisher	= {De Gruyter},
+  title		= {Auxiliary Verbs},
+  year		= {2024},
+  doi		= {10.1515/9783110746389-013}
+}
+
+@Article{	  schafer2024anticausatives,
+  author	= {Sch{\"a}fer, Florian},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {Anticausatives in Transitive Guise},
+  year		= {2024},
+  doi		= {10.1007/s11049-024-09612-w}
+}
+
+@Article{	  crnic2024distributed,
+  author	= {Crni{\v c}, Luka},
+  journal	= {Linguistics and Philosophy},
+  title		= {A Distributed Analysis of Only},
+  year		= {2024},
+  doi		= {10.1007/s10988-024-09420-w}
+}
+
+@Article{	  murphy2019no,
+  author	= {Murphy, Elliot},
+  journal	= {Frontiers in Psychology},
+  title		= {No {Country} for {Oldowan} {Men}: {Emerging} {Factors} in
+		  {Language} {Evolution}},
+  volume	= {10},
+  year		= {2019},
+  doi		= {10.3389/fpsyg.2019.01448}
+}
+
+@Article{	  percus2024copular,
+  author	= {Percus, Orin and Sharvit, Yael},
+  journal	= {Natural Language Semantics},
+  title		= {Copular asymmetries in belief reports},
+  year		= {2024}
+}
+
+@Article{	  lorson2024discursive,
+  author	= {Lorson, Alexandra and Rohde, Hannah and Cummins, Chris},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {The discursive function of additives in interaction},
+  volume	= {9},
+  year		= {2024}
+}
+
+@Article{	  landau2024empirical,
+  author	= {Landau, Idan},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Empirical challenges to the Form-Copy Theory of Control},
+  volume	= {9},
+  year		= {2024}
+}
+
+@Article{	  otott-kovacs2024argumentintroducing,
+  author	= {{\'O}tott-Kov{\'a}cs, Eszter},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {Argument-introducing pluractionals: An investigation of
+		  Kyrgyz and Kazakh assistives},
+  year		= {2024}
+}
+
 @Book{		  gumiel-molina2008estructura,
   address	= {Alcal\'a de Henares},
   author	= {Gumiel-Molina, Silvia},
