--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,32 @@
 
+@Article{	  kim2024not,
+  author	= {Kim, Boram},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Not Every Finite {CP} Is a Phase},
+  volume	= {9},
+  year		= {2024}
+}
+
+@Article{	  skilton2024anaphoric,
+  author	= {Skilton, Amalia},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Anaphoric Demonstratives Occur with Fewer and Different
+		  Pointing Gestures than Exophoric Demonstratives},
+  volume	= {9},
+  year		= {2024}
+}
+
+@Article{	  caha2024default,
+  author	= {Caha, Pavel},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {A Default Theory of Default Case},
+  volume	= {9},
+  year		= {2024}
+}
+
 @InCollection{	  garcia-fernandez2024auxiliary,
   author	= {{Garc{\'i}a-Fern{\'a}ndez}, Luis and Krivochen, Diego
 		  Gabriel},
