--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,13 @@
 
+@Article{	  roberts2024preconditions,
+  author	= {Roberts, Craige and Simons, Mandy},
+  journal	= {Linguistics and Philosophy},
+  title		= {Preconditions and Projection: {{Explaining}} Non-Anaphoric
+		  Presupposition},
+  year		= {2024},
+  doi		= {10.1007/s10988-024-09413-9}
+}
+
 @Article{	  kim2024not,
   author	= {Kim, Boram},
   journal	= {Glossa: a journal of general linguistics},
