--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,14 @@
 
+@Article{	  sawada2024sensebased,
+  author	= {Sawada, Osamu},
+  journal	= {Linguistics and Philosophy},
+  title		= {Sense-Based Low-Degree Modifiers in {{Japanese}} and
+		  {{English}}: Their Relations to Experience, Evaluation, and
+		  Emotions},
+  year		= {2024},
+  doi		= {10.1007/s10988-023-09404-2}
+}
+
 @Article{	  roberts2024preconditions,
   author	= {Roberts, Craige and Simons, Mandy},
   journal	= {Linguistics and Philosophy},
