--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,78 @@
 
+@Book{		  leivada2024sentence,
+  author	= {Leivada, Evelina and Marcus, Gary and G{\"u}nther, Fritz
+		  and Murphy, Elliot},
+  publisher	= {arXiv},
+  title		= {A Sentence Is Worth a Thousand Pictures: Can Large
+		  Language Models Understand Hum4n L4ngu4ge and the W0rld
+		  behind W0rds?},
+  volume	= {(arXiv:2308.00109)},
+  year		= {2024}
+}
+
+@InProceedings{	  mitchell2020priorless,
+  address	= {Barcelona, Spain (Online)},
+  author	= {Mitchell, Jeff and Bowers, Jeffrey},
+  booktitle	= {Proceedings of the 28th International Conference on
+		  Computational Linguistics},
+  pages		= {5147-5158},
+  publisher	= {International Committee on Computational Linguistics},
+  title		= {Priorless Recurrent Networks Learn Curiously},
+  year		= {2020}
+}
+
+@Book{		  kallini2024mission,
+  author	= {Kallini, Julie and Papadimitriou, Isabel and Futrell,
+		  Richard and Mahowald, Kyle and Potts, Christopher},
+  publisher	= {arXiv},
+  title		= {Mission: Impossible Language Models},
+  volume	= {(arXiv:2401.06416)},
+  year		= {2024}
+}
+
+@Article{	  martins2019language,
+  author	= {Martins, Pedro Tiago and Boeckx, Cedric},
+  journal	= {PLOS Biology},
+  number	= {11},
+  pages		= {e3000389},
+  title		= {Language Evolution and Complexity Considerations: The No
+		  Half-Merge Fallacy},
+  volume	= {17},
+  year		= {2019}
+}
+
+@Article{	  berwick2019all,
+  author	= {Berwick, Robert C. and Chomsky, Noam},
+  journal	= {PLOS Biology},
+  number	= {11},
+  pages		= {e3000539},
+  title		= {All or Nothing: No Half-Merge and the Evolution of
+		  Syntax},
+  volume	= {17},
+  year		= {2019}
+}
+
+@Article{	  stegovec2024third,
+  author	= {Stegovec, Adrian},
+  journal	= {The Linguistic Review},
+  number	= {0},
+  title		= {The Third Way: Object Reordering as Ambiguous Labeling
+		  Resolution},
+  volume	= {0},
+  year		= {2024}
+}
+
+@Article{	  saito2024minimal,
+  author	= {Saito, Mamoru},
+  journal	= {The Linguistic Review},
+  number	= {1},
+  pages		= {59--84},
+  title		= {On Minimal Yield and Form Copy: Evidence from East Asian
+		  Languages},
+  volume	= {41},
+  year		= {2024}
+}
+
 @Article{	  sawada2024sensebased,
   author	= {Sawada, Osamu},
   journal	= {Linguistics and Philosophy},
