--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,11 @@
 
+@Article{	  adamson2024split,
+  author	= {Adamson, Luke James},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {Split Coordination with Adjectives in Italian},
+  year		= {2024}
+}
+
 @Book{		  leivada2024sentence,
   author	= {Leivada, Evelina and Marcus, Gary and G{\"u}nther, Fritz
 		  and Murphy, Elliot},
