--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,31 @@
 
+@PhDThesis{	  gotah2024abarquadrangle,
+  address	= {New York, N.Y},
+  author	= {Gotah, Selikem},
+  school	= {New York University},
+  title		= {The A-bar-Quadrangle: From Ewe Dialects to {UG}},
+  year		= {2024}
+}
+
+@Article{	  glass2024red,
+  author	= {Glass, Lelia},
+  journal	= {Corpus Linguistics and Linguistic Theory},
+  title		= {The Red Dress Is Cute: Why Subjective Adjectives Are More
+		  Often Predicative},
+  year		= {2024}
+}
+
+@Article{	  mathieu2024crosslinguistic,
+  author	= {Mathieu, Eric and Zamarlik, Simone},
+  journal	= {Isogloss. Open Journal of Romance Linguistics},
+  number	= {1},
+  pages		= {1--34},
+  title		= {Cross-Linguistic Variation in the Expression of Ignorance:
+		  The Case of Spanish and French},
+  volume	= {10},
+  year		= {2024}
+}
+
 @Article{	  adamson2024split,
   author	= {Adamson, Luke James},
   journal	= {Natural Language and Linguistic Theory},
