--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,11 @@
 
+@InCollection{	  abels2017displacement,
+  author	= {Abels, Klaus},
+  booktitle	= {Oxford Research Encyclopedia of Linguistics},
+  title		= {Displacement in Syntax},
+  year		= {2017}
+}
+
 @PhDThesis{	  gotah2024abarquadrangle,
   address	= {New York, N.Y},
   author	= {Gotah, Selikem},
