--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,36 @@
 
+@Article{	  kovacevic2024status,
+  author	= {Kova{\v c}evi{\'c}, Predrag and Antonyuk, Svitlana and
+		  Quaglia, Stefano},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {The Status of Verbal Theme Vowels in Contemporary
+		  Linguistic Theorizing: Some Recent Developments. An
+		  Introduction.},
+  volume	= {9},
+  year		= {2024}
+}
+
+@Article{	  leonetti-escandell2024interpretation,
+  author	= {Leonetti-Escandell, Victoria and Torregrossa, Jacopo},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {The Interpretation of Null and Overt Subject Pronouns in
+		  Spanish Compared to Greek and Italian},
+  volume	= {9},
+  year		= {2024}
+}
+
+@Article{	  asherov2024strengthening,
+  author	= {Asherov, Daniel and Fox, Danny and Katzir, Roni},
+  journal	= {Linguistics and Philosophy},
+  number	= {4},
+  pages		= {505--516},
+  title		= {Strengthening, Exhaustification, and Rational Inference},
+  volume	= {47},
+  year		= {2024}
+}
+
 @InCollection{	  abels2017displacement,
   author	= {Abels, Klaus},
   booktitle	= {Oxford Research Encyclopedia of Linguistics},
