--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,11 @@
 
+@Article{	  vanalem2024complementizer,
+  author	= {van Alem, Astrid},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {Complementizer Agreement Is Clitic Doubling},
+  year		= {2024}
+}
+
 @Article{	  kovacevic2024status,
   author	= {Kova{\v c}evi{\'c}, Predrag and Antonyuk, Svitlana and
 		  Quaglia, Stefano},
