--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,18 @@
 
+@Article{	  sulemana2024passive,
+  author	= {Sulemana, Abdul-Razak},
+  journal	= {Linguistic Variation},
+  title		= {Passive without Morphology: A Case for Implicit
+		  Arguments},
+  year		= {2024}
+}
+
+@Article{	  wood2024microvariation,
+  author	= {Wood, Jim},
+  title		= {Microvariation in Verbal Rather},
+  year		= {2024}
+}
+
 @Article{	  vanalem2024complementizer,
   author	= {van Alem, Astrid},
   journal	= {Natural Language and Linguistic Theory},
