--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,43 @@
 
+@InCollection{	  harves2008intensional,
+  author	= {Harves, Stephanie},
+  booktitle	= {Proceedings of the 27th {{West Coast Conference}} on
+		  {{Formal Linguistics}}},
+  editor	= {Abner, Natasha and Bishop, Jason},
+  pages		= {211--219},
+  title		= {Intensional {{Transitives}} and {{Silent HAVE}}:
+		  {{Distinguishing}} between {{Want}} and {{Need}}},
+  volume	= {148}
+}
+
+@Article{	  harves2014licensing,
+  author	= {Harves, Stephanie and Myler, Neil},
+  pages		= {213--239},
+  title		= {Licensing {{NPIs}} and Licensing Silence: {{Have}}/Be yet
+		  to in {{English}}},
+  volume	= {148},
+  doi		= {10.1016/j.lingua.2014.05.012}
+}
+
+@Article{	  vangelderen2004economya,
+  author	= {family=Gelderen, given=Elly, prefix=van, useprefix=true},
+  number	= {1},
+  pages		= {59--98},
+  title		= {Economy, {{Innovation}}, and {{Prescriptivism}}: {{From
+		  Spec}} to {{Head}} and {{Head}} to {{Head}}},
+  volume	= {7},
+  doi		= {10.1023/B:JCOM.0000003601.53603.b2}
+}
+
+@Article{	  wood2013parasitic,
+  author	= {Wood, Jim},
+  pages		= {59--87},
+  title		= {Parasitic Participles in the Syntax of Verbal
+		  {\emph{Rather}}},
+  volume	= {137},
+  doi		= {10.1016/j.lingua.2013.08.004}
+}
+
 @Article{	  sulemana2024passive,
   author	= {Sulemana, Abdul-Razak},
   journal	= {Linguistic Variation},
