--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,29 @@
 
+@Book{		  karmiloff-smith1999modularity,
+  author	= {Karmiloff-Smith, Annette},
+  edition	= {4. print},
+  publisher	= {MIT Press},
+  series	= {Learning, Development, and Conceptual Change},
+  title		= {Beyond Modularity: A Developmental Perspective on
+		  Cognitive Science}
+}
+
+@Book{		  levy2020scientific,
+  editor	= {Levy, Arnon and Godfrey-Smith, Peter},
+  publisher	= {Oxford University press},
+  title		= {The Scientific Imagination: Philosophical and
+		  Psychological Perspectives}
+}
+
+@Article{	  lombrozo2024learning,
+  author	= {Lombrozo, Tania},
+  number	= {0},
+  publisher	= {Elsevier},
+  title		= {Learning by Thinking in Natural and Artificial Minds},
+  volume	= {0},
+  doi		= {10.1016/j.tics.2024.07.007}
+}
+
 @InCollection{	  harves2008intensional,
   author	= {Harves, Stephanie},
   booktitle	= {Proceedings of the 27th {{West Coast Conference}} on
